# ai2048

./: .gitignore  Cargo.toml  rustfmt.toml  setup_dev_env.sh
hooks/: pre-commit  pre-push
src/: cli.rs  game_structs.rs  game_traits.rs  main.rs  model_structs.rs  model_traits.rs  training.rs  tui.rs
src/game_structs/: tests.rs
