[package]
name = "ai2048"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "0.18.0", features = ["ndarray", "wgpu", "autodiff", "burn-autodiff"], default-features = true }
chrono = "0.4.42"
clap = { version = "4.5.49", features = ["derive"] }
crossterm = "0.29.0"
rand = "0.9.2"
